--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
     <!-- Home -->
      <section class="first">
   <div class="leftSection">
+    <div>
   Hi, my name is <span class="blue">Rishav</span> <br />
   and I’m a <span class="purple" id="typing-text"></span>
+  </div>
+  <span><button onclick=window.open("Rishav_Rana_Professional_CV.pdf")>view Resume</button></span>
 </div>
 
       <div class="rightSection">
@@ -77,9 +80,8 @@
     <h3>📜 Certifications</h3>
     <ul>
       <li>Web Development Certification — Coursera</li>
-      <li>Java Programming — HackerRank</li>
-      <li>Responsive Web Design — freeCodeCamp</li>
-      <li>Git & GitHub Essentials — Udemy</li>
+      <li>Hackathon participation — <a href="hackmanthan.jpg">Hackmanthan</a></li>
+      <li>Git & GitHub Essentials — Youtube</li>
     </ul>
   </div>
   </div>
@@ -150,20 +152,21 @@
           <h3>Portfolio Website</h3>
           <p>
             A personal portfolio to showcase my web development journey and
-            skills using HTML, CSS, and JavaScript.
+            skills using HTML, CSS, and JavaScript.A responsive and visually appealing website that showcases my skills, education, and projects as a Full Stack Developer.
           </p>
-          <button onclick="window.open(https://rishav-portfolio-nine.vercel.app/)">
+          <button onclick="window.open('https://rishav-portfolio-pifuyadtb-rishav269s-projects.vercel.app/')">
   Visit project
 </button>
         </div>
         <div class="project">
-          <h3>Weather App</h3>
+          <h3>Himbelt</h3>
           <p>
-            A weather app built using an API to show real-time weather data for
-            any city with a sleek design.
+            a site to promote and sell fresh apples, jams, pickles, honey, dry fruits, and other Himachal-grown products directly from farmers and local brands.
           </p>
                 <button onclick="window.open()">
+                
   Visit project
+    <p>(this project is still work in progress)</p>
 </button>
         </div>
         <div class="project">
