--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 
       <div class="rightSection">
-        <img src="pg.png" alt="Profile Image" />
+        <img src="myimage.jpg" alt="Profile Image" />
       </div>
     </section>
 
@@ -161,12 +161,12 @@
         <div class="project">
           <h3>Himbelt</h3>
           <p>
-            a site to promote and sell fresh apples, jams, pickles, honey, dry fruits, and other Himachal-grown products directly from farmers and local brands.
+            a site to promote and sell fresh apples, jams, pickles, honey, dry fruits, and other Himachal-grown products directly from farmers and local brands.<b>(this project is still work in progress)</b>
           </p>
                 <button onclick="window.open()">
                 
   Visit project
-    <p>(this project is still work in progress)</p>
+  
 </button>
         </div>
         <div class="project">
