--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@
     <section class="projects" id="projects">
       <h2>Projects</h2>
       <div class="project-cards">
+             <div class="project">
+          <h3>To-Do List</h3>
+          <p>
+            A responsive task management app created using JavaScript for
+            tracking daily goals.A simple Todo App built using React and Mantine UI
+          </p>
+                <button onclick="window.open('https://javascriptbear.github.io/todo_react_app/')">
+  Visit project
+</button>
+        </div>
         <div class="project">
           <h3>Portfolio Website</h3>
           <p>
@@ -167,16 +177,6 @@
                 
   Visit project
   
-</button>
-        </div>
-        <div class="project">
-          <h3>To-Do List</h3>
-          <p>
-            A responsive task management app created using JavaScript for
-            tracking daily goals.
-          </p>
-                <button onclick="window.open()">
-  Visit project
 </button>
         </div>
       </div>
