--- a/index.html
+++ b/index.html
@@ -179,6 +179,17 @@
   
 </button>
         </div>
+         <div class="project">
+          <h3>Currency converter</h3>
+          <p>
+           This project is a Currency Converter application built using React.js and Tailwind CSS. It allows users to convert between different currencies with exchange rate updates. Tailwind CSS is used for styling and layout. With its dynamic functionality this application provides a reliable tool for managing currency conversions.
+          </p>
+                <button onclick="window.open('https://github.com/rishav269/currency-converter')">
+                
+  Visit project
+  
+</button>
+        </div>
       </div>
     </section>
 
